<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020-26 FRC 2135 Presentation Invasion
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
  ~ associated documentation files (the "Software"), to deal in the Software without restriction,
  ~ including without limitation the rights to use, copy, modify, merge, publish, distribute,
  ~ sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or
  ~ substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT
  ~ NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
  ~ NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
  ~ DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  -->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pre_match_activity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.frc2135.frc_scout.PreMatchActivity">

    <!-- start AppBar layout -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/pre_match_activity_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/pre_match_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@color/colorOnPrimary"
            app:subtitleTextColor="@color/colorOnPrimary" />

    </com.google.android.material.appbar.AppBarLayout>
    <!-- end AppBar layout -->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- start main configuration layout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <TextView
                android:id="@+id/pre_match_title_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:letterSpacing="0.1"
                android:text="@string/match_configuration"
                android:textAllCaps="true"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/font_x_small"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- start event code input layout -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pre_match_event_code_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:endIconMode="clear_text"
                app:helperText="@string/event_code_helper"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pre_match_title_label"
                app:startIconContentDescription="@string/event_icon_desc"
                app:startIconDrawable="@android:drawable/ic_menu_today">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pre_match_event_code_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_code"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:textColor="@color/textPrimary" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- end event code input layout -->

            <!-- start match number input layout -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pre_match_number_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:endIconMode="clear_text"
                app:helperText="@string/match_number_helper"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pre_match_event_code_layout"
                app:startIconContentDescription="@string/match_icon_desc"
                app:startIconDrawable="@android:drawable/ic_menu_edit">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/pre_match_number_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/match_number"
                    android:inputType="text"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:textColor="@color/textPrimary" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- end match number input layout -->

            <!-- start team number input layout -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pre_match_team_number_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:endIconMode="clear_text"
                app:helperText="@string/team_number_helper"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pre_match_number_layout"
                app:startIconContentDescription="@string/team_icon_desc"
                app:startIconDrawable="@android:drawable/ic_menu_info_details">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/pre_match_team_number_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/team_number"
                    android:inputType="text"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:textColor="@color/textPrimary" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- end team number input layout -->

            <!-- start scout name input layout -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pre_match_scout_name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:endIconMode="clear_text"
                app:helperText="@string/scout_name_helper"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pre_match_team_number_layout"
                app:startIconContentDescription="@string/scout_icon_desc"
                app:startIconDrawable="@android:drawable/ic_menu_myplaces">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/pre_match_scout_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/scout_name"
                    android:inputType="textPersonName"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:textColor="@color/textPrimary" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- end scout name input layout -->

            <TextView
                android:id="@+id/pre_match_error_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/please_fill_in"
                android:textColor="?attr/colorError"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pre_match_scout_name_layout" />

            <!-- start buttons layout -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/pre_match_start_button"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginTop="32dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/start_match"
                android:contentDescription="@string/start_match"
                android:textColor="@color/colorOnStartButton"
                android:textSize="@dimen/font_small"
                app:backgroundTint="@color/colorStartButton"
                app:elevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pre_match_scout_name_layout"
                app:layout_goneMarginTop="32dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pre_match_cancel_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:text="@string/cancel"
                android:contentDescription="@string/cancel"
                android:textColor="@color/textSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pre_match_start_button" />
            <!-- end buttons layout -->

        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- end main configuration layout -->
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
