...
                        <!-- start DRIVING ABILITY SLIDER layout -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.slider.Slider
                                android:id="@+id/endgame_driving_ability_slider"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:stepSize="1.0"
                                android:value="0.0"
                                android:valueFrom="0.0"
                                android:valueTo="5.0"
...
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/endgame_generate_qr_button"
                    android:layout_width="275dp"
                    android:layout_height="275dp"
                    android:contentDescription="@string/qr_code_image"
                    android:focusable="true"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
...
