...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            app:chipSpacingHorizontal="12dp">

                            <com.google.android.material.chip.Chip
                                android:id="@+id/teleop_pass_nz_chip"
                                style="@style/CustomChipStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/neutral_zone" />

                            <com.google.android.material.chip.Chip
...
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                >

                                <com.google.android.material.slider.Slider
                                    android:id="@+id/teleop_passing_effectiveness_slider"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:stepSize="1.0"
                                    android:value="0.0"
                                    android:valueFrom="0.0"
                                    android:valueTo="4.0"
...
