<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_auton"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="Auton" />

    <item
        android:id="@+id/navigation_teleop"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="Teleop" />

    <item
        android:id="@+id/navigation_endgame"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Endgame" />

</menu>









