...

    </com.google.android.material.appbar.AppBarLayout>
    <!-- end AppBar layout -->

    <!-- start ViewPager2 layout -->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/scouting_activity_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    <!-- end ViewPager2 layout -->

    <!-- start Bottom navigation layout -->
...
